<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiGuo</string>
    <string name="title_slot_detail">Slot1 Detail</string>
    <string name="SearchButtonName">Search</string>
    <string name="MeaningText">Hello,MiGuo Dictionary!!</string>
    <string name="full_scanner">Full Scan</string>
    <string name="scanner">Scan</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="loading">Loading...</string>
    <string name="scanning">Scanning...</string>
    <string name="full_scan">Full Scan</string>
    <string name="no_tracks_title">No Dictionary Find!!</string>
    <string name="title_dict_list">Dictionary list</string>
    <string name="title_about_list">About list</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_reference">ReferenceActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_dict_launch">DictLaunchActivity</string>
    <string name="title_activity_list_test">ListTestActivity</string>

</resources>
