<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:id="@+id/progressContainer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ProgressBar android:id="@+id/progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/loading"
                android:paddingTop="4dip"
                android:singleLine="true" />
        </LinearLayout>
<!--
        <FrameLayout android:id="@+id/listContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            -->
            <!--android:visibility="gone"> -->

            <LinearLayout
                android:id="@+id/listContainer"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <!-- android:gravity="center"> -->

                <Button
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:text="@string/full_scan"
                    android:id="@+id/reload_button"
                    android:background="#e0e0e0" />
                <TextView android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/title_about_list"
                    android:paddingTop="12dp"
                    android:textSize="18sp"
                    android:singleLine="true"
                    android:background="#e3e3e3"
                    android:layout_marginTop="3dp" />

                <ListView android:id="@+id/about_list"
                    android:width="0.5dp"
                    android:color="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:fastScrollEnabled="true"
                    android:dividerHeight="3dp" />

                <TextView android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/title_dict_list"
                    android:paddingTop="12dp"
                    android:textSize="18sp"
                    android:singleLine="true"
                    android:background="#e3e3e3" />

                <FrameLayout android:id="@+id/dict_list_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <ListView android:id="@+id/dict_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawSelectorOnTop="true"
                        android:fastScrollEnabled="false"
                        android:dividerHeight="3dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:longClickable="false" />
                    <TextView android:id="@+id/empty"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/no_tracks_title"
                        android:visibility="invisible"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:autoText="true"
                        android:focusable="false"
                        android:enabled="false" />
                </FrameLayout>
            </LinearLayout>
<!--        </FrameLayout> -->
    </FrameLayout>
</LinearLayout>